# corporate_rag

./: .claude.md  .coverage  .dockerignore  .env.template  .gitignore  AGENTS.md  BACKLOG.md  CLAUDE-RULES.md  CLAUDE.md  Dockerfile  README.md  api_contrace.md  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  kb-detail.yaml  kb-detail2.yaml  kb-detail3.yaml  kb-page.yaml  kb2.yaml  kb3.yaml  login-page.yaml  openspec  pyproject.toml  skills-lock.json
.claude/: mcp.json  rules.md  settings.local.json
.codebuddy/: models.json
.superpowers/sdd/: task-10-report.md  task-3-report.md  (+1 more)
.superprojects/: task-1-brief.md  task-1-report.md
deploy/: wait-for-it.sh
docs/: 2026-06-13-financial-qa-full-roadmap.md  api-contract.md  api_contract.md  chunking-issues.md  comparison_qyznkf_vs_financial_rag.md  demo-script.md  financial_rag_architecture_analysis.md  page_integration_test_spec.md  requirements_pool.md
nginx/: Dockerfile  nginx.conf
src/: app_service.py  chat_manager.py  document_loader.py  main.py  models.py  rag_chain.py
tests/: conftest.py  reset_data.py  test_api_error.py  test_app.py  test_app_service.py  test_auth.py  test_base.py  test_chat_manager.py  test_chat_page.py  test_chunk_enhancer.py  test_chunking.py  test_dependencies.py  test_docx_parser.py  test_file_store.py  test_kb_page.py  test_langfuse.py  test_middleware.py  test_models.py  test_prompt_manager_fallback.py  test_query_router.py  test_rag_chain.py  test_rag_chain_tracing.py  test_response_codes.py  test_router.py  test_upload_page.py  test_vector_store.py
(+323 files in other folders)
