[build-system]
requires = ["setuptools>=64.0"]
build-backend = "setuptools.build_meta"

[project]
name = "corporate-rag"
version = "0.1.0"
description = "Financial Document QA Assistant - MVP"
authors = [{name = "tangnie"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb==1.5.9",
    "numpy<2.0",
    "langchain-openai==1.3.3",
    "langchain==1.3.11",
    "langchain-community==0.4.2",
    "langchain-core==1.4.8",
    "langchain-text-splitters==1.1.2",
    "langfuse>=2.60.0,<3.0.0",
    "fastapi==0.138.0",
    "python-multipart==0.0.20",
    "uvicorn[standard]==0.49.0",
    "pymupdf==1.27.2.3",
    "python-docx==1.2.0",
    "python-dotenv==1.2.2",
    "loguru==0.7.3",
    "mysql-connector-python==9.7.0",
    "chardet==7.4.3",
    "pymysql==1.2.0",
    "aiomysql>=0.2.0,<1.0.0",
    "redis==8.0.0",
    "dashscope>=1.26.3",
    "rank_bm25>=0.2.2",
    "jieba>=0.42.1",
    "minio>=7.2.0,<8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "pytest-cov==7.0.0",
    "ragas==0.4.3",
    "datasets==4.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]
